styles/contact-me-page.styles.css
:root {
    --contact-me-accent-orange: #FF6B00;

    --contact-me-input-border-color-light: #000000;
    --contact-me-input-border-color-dark: #FFFFFF;
    --contact-me-input-border-color: var(--contact-me-input-border-color-light);

    --contact-me-form-background-light: #FFFFFF;
    --contact-me-form-background-dark: #222222;
    --contact-me-form-background: var(--contact-me-form-background-light);

    --contact-me-form-input-background-light: #FFFFFF;
    --contact-me-form-input-background-dark: #555555;
    --contact-me-form-input-background: var(--contact-me-form-input-background-light);

    --contact-me-form-text-color-light: #000000;
    --contact-me-form-text-color-dark: #FFFFFF;
    --contact-me-form-text-color: var(--contact-me-form-text-color-light);

    --contact-me-form-input-height: 1.8rem;
    --contact-me-form-textarea-height: 4.5rem;
    --contact-me-form-placeholder-size: 1.25rem;
    --contact-me-form-input-margin: 1.35rem;
    --contact-me-label-shrink-factor: 0.6;
    --contact-me-label-move-factor: 1.6;

    --contact-me-margin-bottom: 1.35rem;
    --contact-me-content-top-offset: 2rem;
}

body.darkmode {
    --contact-me-input-border-color: var(--contact-me-input-border-color-dark);
    --contact-me-form-background: var(--contact-me-form-background-dark);
    --contact-me-form-text-color: var(--contact-me-form-text-color-dark);
    --contact-me-form-input-background: var(--contact-me-form-input-background-dark);
}

.contact-me-page {
    width: 100vw;
    height: 100vh;
    display: grid;
    place-items: center;
    background-color: black;
}

.contact-me-page.desktop {
    display: none;
}

.contact-me-wrapper {
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 1920px;
}

.contact-me-content {
    display: flex;
    flex-direction: column;
    z-index: 1;
    align-items: center;
    font-family: 'Inter', sans-serif;
    margin-top: var(--contact-me-content-top-offset);
}

.contact-me-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    color: var(--contact-me-form-text-color);
}

.contact-me-form>.input-wrapper {
    width: 100%;
}

.contact-me-content h1 {
    font-size: 4.5rem;
    font-weight: 700;
    margin-top: 0;
    margin-bottom: 1rem;
    color: var(--contact-me-form-text-color);
}

.contact-me-content h1>span {
    color: var(--contact-me-accent-orange);
}

.contact-me-form input {
    width: 100%;
    margin-bottom: var(--contact-me-form-input-margin);
    height: var(--contact-me-form-input-height);
}

.contact-me-form textarea {
    width: 100%;
    height: var(--contact-me-form-textarea-height);
    margin-bottom: var(--contact-me-margin-bottom);
    resize: none;
}

input, textarea{
    color: var(--contact-me-form-text-color);
}

/*Moving input labels*/
.contact-me-form div {
    position: relative;
}

.contact-me-form label {
    position: absolute;
    --placeholder-top-position: calc(var(--contact-me-form-input-height)/2 - var(--contact-me-form-placeholder-size)/2);
    top: var(--placeholder-top-position);
    left: calc(var(--contact-me-form-input-height)*0.2);
    font-size: 0;
}

.contact-me-form label span {
    display: inline-block;
    font-size: var(--contact-me-form-placeholder-size);
    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.contact-me-form input:focus+label span,
.contact-me-form input:not(:placeholder-shown)+label span,
.contact-me-form textarea:focus+label span,
.contact-me-form textarea:valid+label span {
    --y-transition: calc(-1*var(--contact-me-form-placeholder-size)*var(--contact-me-label-move-factor)*var(--contact-me-label-shrink-factor));
    transform: translate(-5px, var(--y-transition));
    font-size: calc(var(--contact-me-form-placeholder-size)*var(--contact-me-label-shrink-factor));
}

.contact-me-content .g-recaptcha {
    margin-bottom: var(--contact-me-margin-bottom);
}

.contact-me-content button {
    --submit-btn-font-size: 1.25rem;
    --submit-btn-vertical-padding: 0.5rem;
    --submit-btn-horizontal-padding: 1.6rem;
    --submit-btn-height: calc(var(--submit-btn-font-size) + 2*var(--submit-btn-vertical-padding));

    font-size: var(--submit-btn-font-size);
    font-weight: 600;
    font-family: 'Open Sans', sans-serif;
    padding: var(--submit-btn-vertical-padding) var(--submit-btn-horizontal-padding);
    border-radius: calc(0.5*var(--submit-btn-height));

    background: linear-gradient(var(--orange-light), var(--orange-dark));
    border: none;
}

.contact-me-content button:disabled {
    cursor: not-allowed;
    opacity: 0.6;
}

.contact-me-content button:disabled:hover {
    box-shadow: none;
}

/*Gradient borders for input and textarea elements*/
.contact-me-form input,
.contact-me-form textarea {
    border-radius: 5px;
    border: 2px solid var(--contact-me-input-border-color);
    background-color: var(--contact-me-form-input-background);
}

.contact-me-form input:focus,
.contact-me-form textarea:focus {
    outline: none !important;
    border: 2px solid transparent;
    border-radius: 5px;

    background:
        linear-gradient(var(--contact-me-form-input-background), var(--contact-me-form-input-background)) padding-box,
        linear-gradient(var(--orange-light), var(--orange-dark)) border-box;
}

/*Background svgs*/
.contact-me-page svg {
    overflow: visible;
}

.contact-page-background,
.contact-page-foreground,
.contact-page-shadow {
    position: absolute;
    top: 2.5vh;
    left: 1vw;
    height: 95vh;
    width: 98vw;
}

.contact-page-background path {
    fill: var(--contact-me-accent-orange);
}

.contact-page-foreground path {
    fill: var(--contact-me-form-background);
}

.contact-page-shadow path {
    transform: translate(10px, 15px);
    fill: url(#contact-page-shadow-gradient);
}

/*Mobile media queries*/
@media (min-width: 700px) {
    .contact-me-content form {
        width: 22.5rem;
    }

    .contact-me-content h1 {
        font-size: 4.75rem;
    }

    .contact-me-page.mobile {
        --contact-me-form-input-height: 2.25rem;
        --contact-me-form-textarea-height: 6.5rem;
        --contact-me-form-input-margin: 1.5rem;
        --contact-me-label-shrink-factor: 0.7;
        --contact-me-label-move-factor: 1.8;
    }
}

/*Center recaptcha popup on mobile*/
.g-recaptcha-bubble-arrow
{
    display: none;
}

.g-recaptcha-bubble-arrow + div
{
    position: fixed !important;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

/*Toggle between mobile and desktop view*/
.contact-me-page.desktop {
    width: 100vw;
    height: 100vh;
    display: grid;
    place-items: center;
}

.desktop .contact-me-content {
    width: 100vw;
    max-width: 1920px;
}

.desktop .contact-page-shadow path {
    transform: translate(20px, 30px);
    fill: url(#contact-page-shadow-gradient-desktop);
}

.mobile svg.desktop {
    display: none;
}

.desktop svg.mobile {
    display: none;
}

.mobile svg.mobile {
    display: inherit;
}

.desktop svg.desktop {
    display: inherit;
}

/*Desktop small blolbs*/
.contact-page-middle-blob{
    position:absolute;
    right: 7%;
    bottom: 2.5%;
    width: 4em;
    height: 4em;
}

.contact-page-little-blob{
    position:absolute;
    right: 12.5%;
    bottom: 7%;
    width: 6em;
    height: 6em;
}

.contact-page-middle-blob path,
.contact-page-little-blob path{
    fill: var(--contact-me-form-background);
}


/*Desktop media queries*/
@media (min-width: 1000px) {
    .contact-me-content form {
        width: 24rem;
    }

    .contact-me-content h1 {
        font-size: 5rem;
    }
}

@media (min-width: 1150px) {
    .contact-me-content h1 {
        font-size: 6.25rem;
    }

    .contact-me-content form {
        width: 30.5rem;
    }

    :root {
        --contact-me-form-input-height: 2.5rem;
        --contact-me-form-textarea-height: 7.5rem;
    }

    .contact-me-content button {
        --submit-btn-font-size: 1.75rem;
        --submit-btn-vertical-padding: 0.75rem;
        --submit-btn-horizontal-padding: 1.8rem;
    }

    .contact-me-page.desktop {
        --contact-me-label-shrink-factor: 0.8;
        --contact-me-label-move-factor: 2.0;
        --contact-me-form-input-margin: 1.5rem;
    }
}

@media (min-width: 1300px) {
    .contact-me-content h1 {
        font-size: 6.75rem;
    }

    .contact-me-content form {
        width: 32.5rem;
    }

    :root {
        --contact-me-form-input-height: 2.75rem;
        --contact-me-form-textarea-height: 8rem;
    }
    .contact-page-middle-blob{
        right: 12.5%;
        bottom: 4.5%;
    }
    
    .contact-page-little-blob{
        right: 19.5%;
        bottom: 10%;
    }
}

